updated leadership and podcast section page

--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
         <div class="pages">
             <a href="index.html">home</a>
+            <a href="podcast.html">podcast</a>      
             <a href="team.html">meet the team</a>
             <a href="contact.html">contact us</a>
             <a href="resources.html">resources</a>
