--- a/team.html
+++ b/team.html
@@ -40,6 +40,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
         <div class="pages">
             <a href="index.html">home</a>
+            <a href="podcast.html">podcast</a>      
             <a href="team.html">meet the team</a>
             <a href="contact.html">contact us</a>
             <a href="resources.html">resources</a>
@@ -61,31 +62,22 @@
                 <h1>Co-Directors</h1>
                 <div class="bio-row">
                     <div class="bio-card">
-                        <img src="images/team/penpa dolma.png">
-                        <h2>PENPA DOLMA</h2>
+                        <img src="images/team/ugyendeki.png">
+                        <h2>UGYEN DEKI</h2>
                         <p>
-                            Oberlin College ‘26 </br>
-                            Major: Economics & Political Science
+                            Case Western University ‘28</br>
+                            Major: Nursing
                         </p>
                     </div>
 
-                    <div class="bio-card">
+                    <!-- <div class="bio-card">
                         <img src="images/team/nyima bhuti.png">
-                        <h2>NYIMA BHUTI</h2>
+                        <h2>TENZIN SAMTEN</h2>
                         <p>
-                            Wheaton College ‘25 </br>
-                            Major: Biology
+                            Middlebury College ‘25 </br>
+                            Major: Economics
                         </p>
-                    </div>
-
-                    <div class="bio-card">
-                        <img src="images/team/tenzin tseten.png">
-                        <h2>TENZIN TSETEN</h2>
-                        <p>
-                            University of Oregon ‘26 </br>
-                            Major: Human Physiology
-                        </p>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -96,20 +88,11 @@
                 <h1>Mentorship Leads</h1>
                 <div class="bio-row">
                     <div class="bio-card">
-                        <img src="images/team/thupten palmo.png">
-                        <h2>THUPTEN PALMO</h2>
+                        <img src="images/team/sangmo.png">
+                        <h2>TENZIN SANGMO</h2>
                         <p>
-                            Bucknell University ‘27 </br>
-                            Major: Animal Behavior
-                        </p>
-                    </div>
-
-                    <div class="bio-card">
-                        <img src="images/team/tenzin samten.png">
-                        <h2>TENZIN SAMTEN</h2>
-                        <p>
-                            Middlebury College ‘27 </br>
-                            Major: Chemistry/Biochemistry
+                            Smith College ‘28 </br>
+                            Major: Engineering
                         </p>
                     </div>
 
@@ -122,29 +105,10 @@
                 <h1>Educational Content Leads</h1>
                 <div class="bio-row">
                     <div class="bio-card">
-                        <img src="images/team/tenzin tsega.png">
-                        <h2>TENZIN TSEGA</h2>
+                        <img src="images/team/passang.png">
+                        <h2>TENZIN PASSANG</h2>
                         <p>
-                            University of Virginia ‘25 </br>
-                            Major: Global Studies Security & Justice
-                        </p>
-                    </div>
-
-                    <div class="bio-card">
-                        <img src="images/team/tsering lhamo.png">
-                        <h2>TSERING LHAMO</h2>
-                        <p>
-                            Earlham College ‘23 </br>
-                            Major: International Studies
-                        </p>
-                    </div>
-
-                    <div class="bio-card">
-                        <img src="images/team/no pfp.png">
-                        <h2>SONAM TSERING</h2>
-                        <p>
-                            Berea College ‘27 </br>
-                            Major: Undecided
+                            Colorado COllege ‘29 </br>
                         </p>
                     </div>
 
@@ -157,20 +121,10 @@
                 <h1>Marketing Leads</h1>
                 <div class="bio-row">
                     <div class="bio-card">
-                        <img src="images/team/tenzin yangchen.png">
-                        <h2>TENZIN YANGCHEN</h2>
+                        <img src="images/team/kyizom.png">
+                        <h2>TENZIN KYIZOM</h2>
                         <p>
-                            Wellesley College ‘25 </br>
-                            Major: Economics & Computer Science
-                        </p>
-                    </div>
-
-                    <div class="bio-card">
-                        <img src="images/team/dekyi yangzom.png">
-                        <h2>DEKYI YANGZOM</h2>
-                        <p>
-                            Brown University ‘26 </br>
-                            Major: Economics & Applied Mathematics
+                            University of Tampa ‘29 </br>
                         </p>
                     </div>
 
@@ -178,7 +132,7 @@
             </div>
         </section>
 
-        <section class="bio-box">
+        <!-- <section class="bio-box">
             <div>
                 <h1>Graphics & Design Lead</h1>
                 <div class="bio-row">
@@ -191,6 +145,47 @@
                         </p>
                     </div>
 
+                </div>
+            </div>
+        </section> -->
+
+        <section class="bio-box">
+            <div>
+                <h1>Higher Ed Series</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/tsering lhamo.png">
+                        <h2>TSERING LHAMO</h2>
+                        <p>
+                            Columbia University ‘26 </br>
+                            Masters in Internationl Affairs
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/gyaltsen.png">
+                        <h2>TENZIN GYALTSEN</h2>
+                        <p>
+                            Massachusetts Institute of Technology ‘27 </br>
+                            Masters in Technology & Policy Program
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Advisory Role</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/kalden.png">
+                        <h2>KALDEN NAMGYAL</h2>
+                        <p>
+                            Brown University ‘24 </br>
+                            Major: International Affairs & Economics
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -221,8 +216,9 @@
                         <img src="images/team/gyaltsen.png">
                         <h2>TENZIN GYALTSEN</h2>
                         <p>
-                            Macalester College ‘24 </br>
-                            Major: Computer Science & Political Science
+                            Massachusetts Institute of Technology ‘27 </br>
+                            Masters in Technology & Policy Program
+                        </p>
                         </p>
                     </div>
 
