--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
         <div class="pages">
             <a href="index.html">home</a>
+            <a href="podcast.html">podcast</a>            
             <a href="team.html">meet the team</a>
             <a href="contact.html">contact us</a>
             <a href="resources.html">resources</a>
@@ -80,16 +81,8 @@
                 <h3>SONTSA CO-DIRECTORS</h3>
                 <div class="codirector_row">
                     <div class="codirector_image">
-                        <img src="/images/team/penpa dolma.png">
+                        <img src="images/team/ugyendeki.png">
                         <h2>PENPA DOLMA</h2>
-                    </div>
-                    <div class="codirector_image">
-                        <img src="/images/team/nyima bhuti.png">
-                        <h2>NYIMA BHUTI</h2>
-                    </div>
-                    <div class="codirector_image">
-                        <img src="/images/team/tenzin tseten.png">
-                        <h2>TENZIN TSETEN</h2>
                     </div>
                 </div>
             </div>
@@ -108,10 +101,10 @@
 
         <section class="our_work_images">
             <div class="definition">
-                <img src="/images/definition.png">
+                <img src="images/definition.png">
             </div>
             <div class="meeting_pic">
-                <img src="/images/zoom_meeting.png">
+                <img src="images/zoom_meeting.png">
             </div>
         </section>
 
