update the wrong name

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="codirector_row">
                     <div class="codirector_image">
                         <img src="images/team/ugyendeki.png">
-                        <h2>PENPA DOLMA</h2>
+                        <h2>UGYEN DEKI</h2>
                     </div>
                 </div>
             </div>
