updated podcast and blog pages

--- a/podcast.html
+++ b/podcast.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sontsa Initiative</title>
-    <link rel="stylesheet" href="css/resources.css">
+    <link rel="stylesheet" href="css/team.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/podcast.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -41,7 +41,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
         <div class="pages">
             <a href="index.html">home</a>
-            <a href="podcast.html">podcast</a>    
+            <a href="podcast.html">podcast</a>      
             <a href="team.html">meet the team</a>
             <a href="contact.html">contact us</a>
             <a href="resources.html">resources</a>
@@ -52,13 +52,93 @@
     <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
     <main>
-        <section class="resources_title">
+        <section class="team-title">
             <div>
-                <h1>Under Construction</h1>
+                <h1>Sontsa Initiative Team</h1>
             </div>
         </section>
-    
-        <hr class="tools_divider">
+
+        <section class="intro">
+            <img src="images/sontsa-podcast-logo.png" alt="podcast logo">
+            <div>
+                <h1>སོན་རྩའི་སྒྲ་སྒམ་།</h1>
+                <h2>SONTSA PODCAST: ROOTED AND RISING</h2>
+                <p>We are committed to empowering Tibetan youth in exile through a new medium. Through podcasting, we aim to share stories and insights that inspire and guide the next generation of Tibetan leaders.</p>
+            </div>
+        </section>
+
+        <section class="story">
+            <div>
+                <h3>OUR STORY</h3>
+                <p>
+                    Growing out of the Sontsa Initiative’s mission to empower Tibetan youth in exile through mentorship, Sontsa Podcast brings college students and professionals together to talk honestly about school, careers, and everything in between - turning individual journeys into shared guidance. No perfect stories. Just real experiences, lessons learned, and advice we wish we had earlier.
+                </p>
+                <br>
+                <p>Rooted in community. Rising together</p>
+            </div>
+            <img src="images/pod-host.png">
+        </section>
+
+        <section class="goals">
+            <div>
+                <h3>GOALS</h3>
+                <p>
+                    <ul>
+                        <li>Guide and inspire through the lived experiences of Tibetan students and professionals across the globe.</li>
+                        <li>Make education and career paths easier to navigate by sharing honest stories of struggle, growth, and success.</li>
+                        <li>Highlight Tibetan excellence and trailblazers across diverse educational, professional, and personal journeys.</li>
+                        <li>Expand imagination and confidence by illuminating the many paths available and encouraging first steps toward new opportunities.</li>
+                        <li>Build a caring and committed community that supports youth education, mentorship, and the future of Tibet.</li>
+                    </ul>
+                </p>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Co-Hosts</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/penpa dolma.png">
+                        <h2>PENPA DOLMA</h2>
+                        <p>
+                            American University ‘27 </br>
+                            Masters in Economics
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/kalden.png">
+                        <h2>KALDEN NAMGYAL</h2>
+                        <p>
+                            Brown University ‘24 </br>
+                            Major: International Affairs & Economics
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/tsering lhamo.png">
+                        <h2>TSERING LHAMO</h2>
+                        <p>
+                            Columbia University ‘26 </br>
+                            Masters in Internationl Affairs
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/gyaltsen.png">
+                        <h2>TENZIN GYALTSEN</h2>
+                        <p>
+                            Massachusetts Institute of Technology ‘27 </br>
+                            Masters in Technology & Policy Program
+                        </p>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
