--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
         <div class="pages">
             <a href="index.html">home</a>
+            <a href="podcast.html">podcast</a>   
             <a href="team.html">meet the team</a>
             <a href="contact.html">contact us</a>
             <a href="resources.html">resources</a>
@@ -68,7 +69,7 @@
                     <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
                         Ph.D. by Sontsa Initiative</p>
                     <p></p><a data-post-link
-                        href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+                        href="https://sontsa.substack.com/p/exciting-news-sontsa-initiative-launches">Read on Substack</a>
                 </div>
                 <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
             </div>
