updated tensang's photo

--- a/team.html
+++ b/team.html
@@ -88,7 +88,7 @@
                 <h1>Mentorship Leads</h1>
                 <div class="bio-row">
                     <div class="bio-card">
-                        <img src="images/team/sangmo.png">
+                        <img src="images/team/tensang.png">
                         <h2>TENZIN SANGMO</h2>
                         <p>
                             Smith College ‘28 </br>
@@ -108,7 +108,7 @@
                         <img src="images/team/passang.png">
                         <h2>TENZIN PASSANG</h2>
                         <p>
-                            Colorado COllege ‘29 </br>
+                            Colorado College ‘29 </br>
                         </p>
                     </div>
 
